<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.om2m</groupId>
	<artifactId>org.eclipse.om2m</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>org.eclipse.om2m.core</module>
		<module>org.eclipse.om2m.site.nscl</module>
	</modules>

	<properties>
		<java.version>1.7</java.version>
		<maven.version>3.0</maven.version>
		<tycho.version>0.20.0</tycho.version>
		<tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
	</properties>

	<repositories>
	
		<repository>
			<id>luna</id>
			<url>http://download.eclipse.org/releases/luna</url>
			<layout>p2</layout>
		</repository>
		
		
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
		</plugins>
	</build>
</project>